# prueba-gigflow

./: .env.example  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: api.py  config.py  database.py  main.py
src/migrations/: env.py  initial_seed.py
src/migrations/versions/: 75eeb1552d09_create_models.py
src/prueba/application/use_cases/: service_finder.py
src/prueba/domain/models/: delivery.py  package.py  service.py
src/prueba/domain/ports/: service_repository.py
src/prueba/infrastructure/postgres/adapters/: postgres_service_repository.py
src/prueba/infrastructure/postgres/mappers/: delivery_mapper.py  package_mapper.py  service_mapper.py
src/prueba/infrastructure/postgres/models/: base_model.py  delivery_model.py  service_model.py
src/prueba/infrastructure/sqlalchemy/adapters/: sqlalchemy_service_repository.py
src/prueba/infrastructure/sqlalchemy/mappers/: package_mapper.py  service_mapper.py
src/prueba/infrastructure/sqlalchemy/models/: __init__.py  package_model.py  service_model.py
